k8s/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuvexa-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nuvexa.local
      http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # Backend: microservicio personal
          - path: /api/personal(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: personal-service
                port:
                  number: 3000

          # Backend: microservicio vehiculos
          - path: /api/vehiculos(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vehiculos-service
                port:
                  number: 3000
